# senbara

./: .gitignore  README.md  go.mod  go.work  go.work.sum  meson.build
libsenbara-gtk/: .gitignore  Makefile  SenbaraGtk-1.0.gir  docs.toml  example.js  go.mod  go.sum  main.go  main.h
libsenbara-gtk-go/: gen.go  gen.sh  go.mod
libsenbara-gtk-go/v4/senbaragtk/: main.go
libsenbara-gtk/assets/resources/: index.go  index.gresource.xml  window.blp
senbara-cli/: README.md  go.mod  go.sum
senbara-cli/cmd/senbara-cli/: main.go
senbara-common/: README.md  go.mod  go.sum  sqlc.yaml
senbara-common/db/queries/: activities.sql  contacts.sql  debts.sql  index.sql  journal.sql
senbara-common/internal/tables/: activities.sql.go  contacts.sql.go  db.go  debts.sql.go  index.sql.go  journal.sql.go  models.go
senbara-common/pkg/authn/: authenticate.go  authorize.go  deregister.go  discovery.go  exchange.go  index.go  register.go
senbara-common/pkg/models/: activities.go  contacts.go  debts.go  index.go  journal.go
senbara-common/pkg/persisters/: activities.go  contacts.go  debts.go  index.go  journal.go  userdata.go
senbara-common/pkg/queries/: activities.sql  contacts.sql  debts.sql  journal.sql
senbara-common/pkg/tables/: activities.sql.go  contacts.sql.go  debts.sql.go  journal.sql.go
senbara-forms/: README.md  go.mod  go.sum  vercel.json
senbara-forms/api/senbara-forms/: index.go
senbara-forms/cmd/senbara-forms/: main.go
senbara-forms/pkg/controllers/: activities.go  authn.go  code.go  contacts.go  debts.go  home.go  i18n.go  index.go  journal.go  root.go  userdata.go
senbara-forms/pkg/persisters/: contacts.go  journal.go  userdata.go
senbara-forms/pkg/queries/: journal.sql
senbara-forms/pkg/tables/: contacts.sql.go
senbara-forms/pkg/templates/: activities_add.html  activities_edit.html  activities_view.html  contacts.html  contacts_add.html  contacts_edit.html  contacts_view.html  debts_add.html  debts_edit.html  footer.html  index.html  journal.html  journal_add.html  journal_edit.html  journal_view.html  nav.html  redirect.html
senbara-forms/po/: default.pot  index.go
senbara-forms/web/static/: main.css
senbara-forms/web/templates/: 404.html  activities_add.html  activities_edit.html  activities_view.html  contacts_view.html  debts_add.html  debts_edit.html  footer.html  header_content.html  index.html  journal_add.html  journal_edit.html  journal_view.html  redirect.html
senbara-gnome/: .gitignore  README.md  go.mod  go.sum
senbara-gnome-gomod/: .gitignore  com.pojtinger.felicitas.SenbaraGnomeGomod.json  go.mod  go.mod.json  modules.txt  senbaragtkmeson.go.mod.json
senbara-gnome-gomod/po/: index.go  senbara-gnome-gomod.pot
senbara-gnome-gomod/src/: application.go  config.go  resources.go  senbara-gnome-gomod.gresource.xml  window.blp  window.go
senbara-gnome-meson/: com.pojtinger.felicitas.SenbaraGnomeMeson.json  go.mod  go.mod.json  go.sum  meson.build  modules.txt  senbaragtk.modules.txt  senbaragtkmeson.go.mod.json
senbara-gnome-meson/po/: de.po  en_GB.po  en_US.po  fr.po  fr_CA.po  meson.build  senbara-gnome-meson.pot
senbara-gnome-meson/src/: application.go  config.go.in  constants.go  main.go  meson.build  resources.go  senbara-gnome-meson.gresource.xml  window.blp  window.go
senbara-gnome-neo/: go.mod  go.mod.json  go.sum  main.go  meson.build  modules.txt  senbaragtk.go.mod.json  senbaragtk.modules.txt
senbara-gnome-neo/assets/resources/: index.go  index.gresource.xml  window.blp
senbara-gnome-neo/po/: LINGUAS  POTFILES.in  de.po  en_GB.po  en_US.po  fr.po  fr_CA.po  meson.build  senbara-gnome-neo.pot  senbara-gtk.pot
senbara-gnome-neo/src/: application.go  main-window.blp  main.go  main_window.go  meson.build  resources.go  senbara-gnome-neo-window.blp  senbara-gnome-neo.go  senbara-gnome-neo.gresource.xml  window.blp  window.go
senbara-gnome-neo2/: com.pojtinger.felicitas.SenbaraGnomeNeo.json  go.sum  main.go  senbaragtk.go.mod.json
senbara-gnome-neo2/assets/resources/: index.gresource.xml
senbara-gnome-puregotk/: Makefile  Senbara-1.0.gir  Senbara-1.0.typelib  docs.toml  example.js  g-ir-cpp-28s_wvwr.c  go.mod  libsenbara.h  run-example.sh
senbara-gnome-puregotk/assets/resources/: index.go  index.gresource.xml  window.blp
senbara-gnome-puregotk/cmd/senbara-gnome-puregotk/: main.go  senbara.h
senbara-gnome-puregotk/docs/: class.PureGoTKMainWindow.html  classes_hierarchy.html  ctor.PureGoTKMainWindow.new.html  docs.devhelp2  func.init_types.html  index.html  index.json  signal.PureGoTKMainWindow.button-test-clicked.html
senbara-gnome/po/: de.po  default.pot  en_GB.po  en_US.po  fr.po  fr_CA.po  index.go  senbara-gnome.pot
senbara-gtk/: .gitignore  Makefile  SenbaraGtk-0.1.gir  com.pojtinger.felicitas.SenbaraGtkExample.json  docs.toml  example.js  go.mod  go.mod.json  go.sum  main.go  meson.build  modules.txt  senbara-gtk-version.h.in  senbara-gtk.go  senbara-gtk.h  senbara-gtk.pc
senbara-gtk-go/: gen.go  go.mod  go.sum
senbara-gtk-go-meson/: gen.go  gen.sh  go.mod  go.sum
senbara-gtk-go-meson/senbaragtkmeson/: window.go
senbara-gtk-go/senbaragtk/: senbara-gtk.go  window.go
senbara-gtk-meson/: .gitignore  com.pojtinger.felicitas.SenbaraGtkMesonExample.json  example.js  go.mod  meson.build  modules.txt
senbara-gtk-meson/po/: POTFILES.in  de.po  en_US.po  fr_CA.po  meson.build  senbara-gtk-meson.pot
senbara-gtk-meson/src/: constants.go  docs.toml.in  meson.build  senbara-gtk-meson-version.h.in  senbara-gtk-meson.go  senbara-gtk-meson.gresource.xml  senbara-gtk-meson.h  window.blp  window.go  window.h
senbara-gtk/assets/resources/: index.go  index.gresource.xml  window.blp
senbara-gtk/data/: index.go
senbara-gtk/po/: POTFILES.in  de.po  en_GB.po  fr.po  meson.build  senbara-gtk.pot
senbara-gtk/src/: config.go.in  constants.go  docs.toml.in  meson.build  senbara-gtk-version.h.in  senbara-gtk-window.blp  senbara-gtk.go  senbara-gtk.gresource.xml  senbara-gtk.h  window.go  window.h
senbara-rest/: README.md  go.mod  go.sum  openapi-codegen.yaml  vercel.json
(+150 files in other folders)
